[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/ball/Ball.gd" type="Script" id=1]
[ext_resource path="res://assets/circle.png" type="Texture" id=2]
[ext_resource path="res://assets/small_circle.png" type="Texture" id=3]
[ext_resource path="res://assets/icons8-play-96.png" type="Texture" id=4]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0.876341 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -2.29546, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.106145, 0.927374 )
colors = PoolColorArray( 0.964706, 0.113725, 0.239216, 1, 1, 1, 1, 0 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 338.5, 1 )

[sub_resource type="CircleShape2D" id=1]
radius = 27.0185

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "shrink"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("body:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.25, 0.35, 0.45 ),
"transitions": PoolRealArray( 2, 2, 0.5, 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.7, 0.7 ), Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[node name="Ball" type="Area2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Trail" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 2.0
speed_scale = 20.0
local_coords = false
texture = ExtResource( 3 )
gravity = Vector2( 0, 0 )
linear_accel = 10.0
scale_amount_curve = SubResource( 2 )
color = Color( 0.964706, 0.113725, 0.239216, 1 )
color_ramp = SubResource( 3 )

[node name="body" type="Node2D" parent="."]

[node name="Sprite2" type="Sprite" parent="body"]
visible = false
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 0.55, 0.55 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="body"]
modulate = Color( 0.964706, 0.113725, 0.239216, 1 )
scale = Vector2( 0.52, 0.52 )
texture = ExtResource( 2 )

[node name="indicator" type="Sprite" parent="body"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
offset = Vector2( 100, 0 )

[node name="RayCastArea" type="Area2D" parent="body"]
collision_layer = 128
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="body/RayCastArea"]
position = Vector2( 328.5, 0 )
shape = SubResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/shrink = SubResource( 5 )

[node name="Line2D" type="Line2D" parent="."]
visible = false
z_index = -1
width = 40.0
width_curve = SubResource( 7 )
default_color = Color( 0.964706, 0.113725, 0.239216, 1 )

[node name="RotationTween" type="Tween" parent="."]

[node name="TweenTween" type="Tween" parent="."]

[node name="endSlowmoTimer" type="Timer" parent="."]
wait_time = 0.08
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Ball_body_entered"]
[connection signal="area_entered" from="body/RayCastArea" to="." method="_on_RayCastArea_area_entered"]
[connection signal="area_exited" from="body/RayCastArea" to="." method="_on_RayCastArea_area_exited"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
